--- a/_posts/2024-09-05-focus-me.md
+++ b/_posts/2024-09-05-focus-me.md
@@ -4,8 +4,8 @@ category: [programming, python]
 title:  "Focus Me 프로젝트"
 date: 2024-09-05
 author: jsh #Author's nick.
-prevPart: _posts/2024-08-09-digital-fan.md #Previous part.
-nextPart: _posts/2024-10-23-smart-library.md #Next part.
+#nextPart: _posts/2024-10-23-smart-library.md
+#prevPart: _posts/2024-08-09-digital-fan.md
 ---
 
 # 스마트 트래킹 줌 솔루션
