Modify projects link

--- a/_posts/2024-09-05-focus-me.md
+++ b/_posts/2024-09-05-focus-me.md
@@ -130,6 +130,6 @@ python focus_me.py
 ---
 
 ## GitHub 저장소
-[프로젝트 코드 보기](https://github.com/radon99/radon99.github.io/focusme)
+[프로젝트 코드 보기](https://github.com/radon99/radon99.github.io/tree/main/projects/FocusMe)
 
 
